--- a/css/responsive.css
+++ b/css/responsive.css
@@ -127,7 +127,8 @@
         display: none;
     }
     .contact-form {
-        width: 100%;
+        width: 90%;
+        top: -52%
     }
 }
 /* 539 end  */
